src/hello/GrammarParser.java
// $ANTLR 3.5 /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g 2013-06-27 16:12:02

  package hello;  
  import java.lang.StringBuilder;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class GrammarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "DIGITS", "LETTER", "STR", "STRING", 
		"WS", "'('", "')'", "'['", "'align'", "'body'", "'bold'", "'bottom'", 
		"'center'", "'color'", "'end_body'", "'end_bold'", "'end_font'", "'end_head'", 
		"'end_italic'", "'end_key_subject'", "'end_key_text'", "'end_link'", "'end_main'", 
		"'end_paragraph'", "'end_title'", "'end_u_line'", "'face'", "'font'", 
		"'head'", "'height'", "'href'", "'id'", "'image'", "'italic'", "'justify'", 
		"'key_image'", "'key_subject'", "'key_text'", "'left'", "'link'", "'main'", 
		"'middle'", "'name'", "'new_line'", "'paragraph'", "'relation'", "'right'", 
		"'size'", "'source'", "'target'", "'title'", "'top'", "'u_line'", "'width'"
	};
	public static final int EOF=-1;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int DIGITS=4;
	public static final int LETTER=5;
	public static final int STR=6;
	public static final int STRING=7;
	public static final int WS=8;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public GrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return GrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g"; }


	  ParserBuilder builder = new ParserBuilder();



	// $ANTLR start "page"
	// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:21:1: page returns [StringBuilder result] : res= main_tag ;
	public final StringBuilder page() throws RecognitionException {
		StringBuilder result = null;


		StringBuilder res =null;

		try {
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:22:2: (res= main_tag )
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:22:4: res= main_tag
			{
			pushFollow(FOLLOW_main_tag_in_page55);
			res=main_tag();
			state._fsp--;

			result = res;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return result;
	}
	// $ANTLR end "page"



	// $ANTLR start "main_tag"
	// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:27:1: main_tag returns [StringBuilder result] : 'main' ( '[' )? head_tag body_tag 'end_main' ;
	public final StringBuilder main_tag() throws RecognitionException {
		StringBuilder result = null;


		try {
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:28:2: ( 'main' ( '[' )? head_tag body_tag 'end_main' )
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:28:4: 'main' ( '[' )? head_tag body_tag 'end_main'
			{
			match(input,44,FOLLOW_44_in_main_tag79); 
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:28:11: ( '[' )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==11) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:28:12: '['
					{
					match(input,11,FOLLOW_11_in_main_tag82); 
					}
					break;

			}

				
						builder.append("<html>");
						builder.levelUp();
					
			pushFollow(FOLLOW_head_tag_in_main_tag95);
			head_tag();
			state._fsp--;

			pushFollow(FOLLOW_body_tag_in_main_tag105);
			body_tag();
			state._fsp--;

			match(input,26,FOLLOW_26_in_main_tag112); 

				 		builder.append("</html>");
				 		result = builder.getBuilder();
				 	
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return result;
	}
	// $ANTLR end "main_tag"



	// $ANTLR start "head_tag"
	// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:41:1: head_tag : 'head' ( '[' )? ( title_tag | tag )* 'end_head' ;
	public final void head_tag() throws RecognitionException {
		try {
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:42:2: ( 'head' ( '[' )? ( title_tag | tag )* 'end_head' )
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:42:4: 'head' ( '[' )? ( title_tag | tag )* 'end_head'
			{
			match(input,32,FOLLOW_32_in_head_tag127); 
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:42:11: ( '[' )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==11) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:42:12: '['
					{
					match(input,11,FOLLOW_11_in_head_tag130); 
					}
					break;

			}


				  		builder.append("<head>");
				  		//builder.levelUp();
				  	
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:47:5: ( title_tag | tag )*
			loop3:
			while (true) {
				int alt3=3;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==54) ) {
					alt3=1;
				}
				else if ( (LA3_0==14||LA3_0==31||(LA3_0 >= 36 && LA3_0 <= 37)||(LA3_0 >= 39 && LA3_0 <= 41)||LA3_0==43||(LA3_0 >= 47 && LA3_0 <= 49)||LA3_0==56) ) {
					alt3=2;
				}

				switch (alt3) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:47:6: title_tag
					{
					pushFollow(FOLLOW_title_tag_in_head_tag143);
					title_tag();
					state._fsp--;

					}
					break;
				case 2 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:47:18: tag
					{
					pushFollow(FOLLOW_tag_in_head_tag147);
					tag();
					state._fsp--;

					}
					break;

				default :
					break loop3;
				}
			}

			match(input,21,FOLLOW_21_in_head_tag154); 

				 		builder.append("</head>");
				 	
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "head_tag"



	// $ANTLR start "body_tag"
	// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:53:1: body_tag : 'body' ( '[' )? ( STR | tag )* 'end_body' ;
	public final void body_tag() throws RecognitionException {
		Token STR1=null;

		try {
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:54:2: ( 'body' ( '[' )? ( STR | tag )* 'end_body' )
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:54:4: 'body' ( '[' )? ( STR | tag )* 'end_body'
			{
			match(input,13,FOLLOW_13_in_body_tag170); 
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:54:11: ( '[' )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==11) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:54:12: '['
					{
					match(input,11,FOLLOW_11_in_body_tag173); 
					}
					break;

			}


						builder.append("<body>");
						//builder.levelUp();
					
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:59:4: ( STR | tag )*
			loop5:
			while (true) {
				int alt5=3;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==STR) ) {
					alt5=1;
				}
				else if ( (LA5_0==14||LA5_0==31||(LA5_0 >= 36 && LA5_0 <= 37)||(LA5_0 >= 39 && LA5_0 <= 41)||LA5_0==43||(LA5_0 >= 47 && LA5_0 <= 49)||LA5_0==56) ) {
					alt5=2;
				}

				switch (alt5) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:59:5: STR
					{
					STR1=(Token)match(input,STR,FOLLOW_STR_in_body_tag185); 
					builder.append((STR1!=null?STR1.getText():null));
					}
					break;
				case 2 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:60:5: tag
					{
					pushFollow(FOLLOW_tag_in_body_tag193);
					tag();
					state._fsp--;

					}
					break;

				default :
					break loop5;
				}
			}

			match(input,18,FOLLOW_18_in_body_tag202); 

				 		builder.append("</body>");
				 		builder.levelDown();
				 	
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "body_tag"



	// $ANTLR start "tag"
	// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:67:1: tag : ( paragraph | new_line_tag | font_tag | bold_tag | italic_tag | u_line_tag | image_tag | link_tag | key_Subject | key_Text | key_Image | relation_tag );
	public final void tag() throws RecognitionException {
		try {
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:68:2: ( paragraph | new_line_tag | font_tag | bold_tag | italic_tag | u_line_tag | image_tag | link_tag | key_Subject | key_Text | key_Image | relation_tag )
			int alt6=12;
			switch ( input.LA(1) ) {
			case 48:
				{
				alt6=1;
				}
				break;
			case 47:
				{
				alt6=2;
				}
				break;
			case 31:
				{
				alt6=3;
				}
				break;
			case 14:
				{
				alt6=4;
				}
				break;
			case 37:
				{
				alt6=5;
				}
				break;
			case 56:
				{
				alt6=6;
				}
				break;
			case 36:
				{
				alt6=7;
				}
				break;
			case 43:
				{
				alt6=8;
				}
				break;
			case 40:
				{
				alt6=9;
				}
				break;
			case 41:
				{
				alt6=10;
				}
				break;
			case 39:
				{
				alt6=11;
				}
				break;
			case 49:
				{
				alt6=12;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:68:4: paragraph
					{
					pushFollow(FOLLOW_paragraph_in_tag218);
					paragraph();
					state._fsp--;

					}
					break;
				case 2 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:69:4: new_line_tag
					{
					pushFollow(FOLLOW_new_line_tag_in_tag223);
					new_line_tag();
					state._fsp--;

					}
					break;
				case 3 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:70:4: font_tag
					{
					pushFollow(FOLLOW_font_tag_in_tag228);
					font_tag();
					state._fsp--;

					}
					break;
				case 4 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:71:4: bold_tag
					{
					pushFollow(FOLLOW_bold_tag_in_tag233);
					bold_tag();
					state._fsp--;

					}
					break;
				case 5 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:72:4: italic_tag
					{
					pushFollow(FOLLOW_italic_tag_in_tag238);
					italic_tag();
					state._fsp--;

					}
					break;
				case 6 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:73:4: u_line_tag
					{
					pushFollow(FOLLOW_u_line_tag_in_tag243);
					u_line_tag();
					state._fsp--;

					}
					break;
				case 7 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:74:4: image_tag
					{
					pushFollow(FOLLOW_image_tag_in_tag248);
					image_tag();
					state._fsp--;

					}
					break;
				case 8 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:75:4: link_tag
					{
					pushFollow(FOLLOW_link_tag_in_tag253);
					link_tag();
					state._fsp--;

					}
					break;
				case 9 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:76:4: key_Subject
					{
					pushFollow(FOLLOW_key_Subject_in_tag258);
					key_Subject();
					state._fsp--;

					}
					break;
				case 10 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:77:4: key_Text
					{
					pushFollow(FOLLOW_key_Text_in_tag263);
					key_Text();
					state._fsp--;

					}
					break;
				case 11 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:78:4: key_Image
					{
					pushFollow(FOLLOW_key_Image_in_tag268);
					key_Image();
					state._fsp--;

					}
					break;
				case 12 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:79:4: relation_tag
					{
					pushFollow(FOLLOW_relation_tag_in_tag273);
					relation_tag();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "tag"



	// $ANTLR start "paragraph"
	// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:83:1: paragraph : 'paragraph' '(' ( text_atribute )* ')' ( STR | tag )* 'end_paragraph' ;
	public final void paragraph() throws RecognitionException {
		Token STR2=null;

		try {
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:84:2: ( 'paragraph' '(' ( text_atribute )* ')' ( STR | tag )* 'end_paragraph' )
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:85:3: 'paragraph' '(' ( text_atribute )* ')' ( STR | tag )* 'end_paragraph'
			{

						builder.levelUp();
						builder.appendT("<p");
					
			match(input,48,FOLLOW_48_in_paragraph295); 
			match(input,9,FOLLOW_9_in_paragraph297); 
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:89:18: ( text_atribute )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==12) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:89:19: text_atribute
					{
					pushFollow(FOLLOW_text_atribute_in_paragraph299);
					text_atribute();
					state._fsp--;

					}
					break;

				default :
					break loop7;
				}
			}

			match(input,10,FOLLOW_10_in_paragraph302); 

						builder.appendN(">");
					
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:93:3: ( STR | tag )*
			loop8:
			while (true) {
				int alt8=3;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==STR) ) {
					alt8=1;
				}
				else if ( (LA8_0==14||LA8_0==31||(LA8_0 >= 36 && LA8_0 <= 37)||(LA8_0 >= 39 && LA8_0 <= 41)||LA8_0==43||(LA8_0 >= 47 && LA8_0 <= 49)||LA8_0==56) ) {
					alt8=2;
				}

				switch (alt8) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:93:4: STR
					{
					STR2=(Token)match(input,STR,FOLLOW_STR_in_paragraph311); 
					builder.append((STR2!=null?STR2.getText():null));
					}
					break;
				case 2 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:95:3: tag
					{
					pushFollow(FOLLOW_tag_in_paragraph324);
					tag();
					state._fsp--;

					}
					break;

				default :
					break loop8;
				}
			}

			match(input,27,FOLLOW_27_in_paragraph330); 

						builder.append("</p>");
						builder.levelDown();
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "paragraph"



	// $ANTLR start "new_line_tag"
	// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:103:1: new_line_tag : 'new_line' ( '[' )? ;
	public final void new_line_tag() throws RecognitionException {
		try {
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:104:2: ( 'new_line' ( '[' )? )
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:104:4: 'new_line' ( '[' )?
			{
			match(input,47,FOLLOW_47_in_new_line_tag346); 
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:104:15: ( '[' )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==11) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:104:16: '['
					{
					match(input,11,FOLLOW_11_in_new_line_tag349); 
					}
					break;

			}


						builder.levelUp();	
						builder.append("<br>");
						builder.levelDown();
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "new_line_tag"



	// $ANTLR start "title_tag"
	// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:111:1: title_tag : 'title' ( '[' )? ( STR | tag )* 'end_title' ;
	public final void title_tag() throws RecognitionException {
		Token STR3=null;

		try {
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:112:2: ( 'title' ( '[' )? ( STR | tag )* 'end_title' )
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:112:4: 'title' ( '[' )? ( STR | tag )* 'end_title'
			{
				builder.levelUp();
			match(input,54,FOLLOW_54_in_title_tag370); 
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:113:11: ( '[' )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==11) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:113:12: '['
					{
					match(input,11,FOLLOW_11_in_title_tag373); 
					}
					break;

			}

				builder.append("<title>");
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:115:3: ( STR | tag )*
			loop11:
			while (true) {
				int alt11=3;
				int LA11_0 = input.LA(1);
				if ( (LA11_0==STR) ) {
					alt11=1;
				}
				else if ( (LA11_0==14||LA11_0==31||(LA11_0 >= 36 && LA11_0 <= 37)||(LA11_0 >= 39 && LA11_0 <= 41)||LA11_0==43||(LA11_0 >= 47 && LA11_0 <= 49)||LA11_0==56) ) {
					alt11=2;
				}

				switch (alt11) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:115:4: STR
					{
					STR3=(Token)match(input,STR,FOLLOW_STR_in_title_tag387); 

								builder.levelUp();
								builder.append((STR3!=null?STR3.getText():null));
								builder.levelDown();	
							
					}
					break;
				case 2 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:122:3: tag
					{
					pushFollow(FOLLOW_tag_in_title_tag401);
					tag();
					state._fsp--;

					}
					break;

				default :
					break loop11;
				}
			}

			match(input,28,FOLLOW_28_in_title_tag409); 

						 builder.append("</title>");
						 builder.levelDown();	
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "title_tag"



	// $ANTLR start "image_tag"
	// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:130:1: image_tag : 'image' '(' source_atribute ( image_atribute )* ')' ;
	public final void image_tag() throws RecognitionException {
		try {
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:131:2: ( 'image' '(' source_atribute ( image_atribute )* ')' )
			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:132:3: 'image' '(' source_atribute ( image_atribute )* ')'
			{

						builder.levelUp();
						builder.appendT("<img");			
					
			match(input,36,FOLLOW_36_in_image_tag435); 
			match(input,9,FOLLOW_9_in_image_tag437); 
			pushFollow(FOLLOW_source_atribute_in_image_tag439);
			source_atribute();
			state._fsp--;

			// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:136:32: ( image_atribute )*
			loop12:
			while (true) {
				int alt12=2;
				int LA12_0 = input.LA(1);
				if ( (LA12_0==12||LA12_0==33||LA12_0==57) ) {
					alt12=1;
				}

				switch (alt12) {
				case 1 :
					// /Users/morpheby/Documents/workspace/volynets-HTML-antlr/src/hello/Grammar.g:136:33: image_atribute
					{
					pushFollow(FOLLOW_image_atribute_in_image_tag443);
					image_atribute();
					state._fsp--;

					}
					break;

				default :
					break loop12;
				}
			}

			match(input,10,FOLLOW_10_in_image_tag447); 
				
						builder.appendN(">");
						builder.levelDown();			
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "image_tag"


